--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
+    "node": "16.1.0"
 },
   "scripts": {
     "test": "nodemon index.js",
