--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ace-builds": "^1.4.13",
     "axios": "^0.21.1",
     "brace": "^0.11.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-ace": "^9.4.3",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
